--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Title</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="main.js"></script>
 
@@ -14,7 +15,11 @@
 
 <body>
     <div class="container">
-        <h1>Title</h1>
+        <div>
+            <h1>Title</h1>
+            <i class="material-icons">birthday</i>
+        </div>
+
     </div>
 </body>
 
