--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container">
         <div>
             <h1>Title</h1>
-            <i class="material-icons">birthday</i>
+            <i class="material-icons">cake</i>
         </div>
 
     </div>
